--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
         "php": ">=7.1",
         "guzzlehttp/guzzle": "7.2.0"
     },
+    "require-dev": {
+        "mockery/mockery": "dev-master",
+        "phpunit/phpunit": "^9.5"
+    },
     "autoload": {
         "psr-4": {
             "Giphy\\": "src/"
